2009-08-25  Murray Cumming  <murrayc@murrayc.com>

	Comment out use of gda_sql_identifier_remove_quotes().

	* glom/base_db.cc: remove_quotes(): Comment out use of 
	gda_sql_identifier_remove_quotes() with a stdcerr warning because 
	it is deprecated and I get a weird undefined reference error and we 
	need to change how we use this anyway. To fix the build.

2009-08-25  Johannes Schmid <jschmid@openismus.com>

	Fixed remaing maemo build problems

	* autogen.sh: Don't hardcode automake-1.10
	* glom/application.cc:
	* glom/base_db.cc:
	* glom/dialog_invalid_data.cc:
	* glom/filechooser_export.cc:
	* glom/glade_utils.cc:
	* glom/glade_utils.h:
	* glom/main.cc:
	* glom/utility_widgets/datawidget.cc:
	* glom/utility_widgets/imageglom:
	Fixed error handling of Gtk::Builder (change in gtkmm 2.14)
	
	* glom/mode_data/flowtablewithfields.cc:
	* glom/mode_data/flowtablewithfields.h:
	Fixed vfuncs problem

2009-08-21  Daniel Elstner  <danielk@openismus.com>

	Do not use .pyd extension on non-Windows systems

	* Makefile.am (pymod_ldflags): Set variable conditionally and use
	the "-shrext .pyd" option only on Windows hosts.

2009-08-21  Michael Hasselmann  <michaelh@openismus.com>

	* glom/libglom/connectionpool_backends/sqlite.cc: Fix typos to fix the build.
	Bug #592576 

2009-08-21  Murray Cumming  <murrayc@murrayc.com>

	Document::get/set_connection_user(): Don't save this in the document.
	
	* glom/libglom/document/document.[h|cc]: get/set_connection_user(): 
	Document these as not being saved in the document, because it makes no sense 
	to save a single user there, because Glom is a multi-user system.
	* glom/dialog_connection.cc: load_after(), save_before(): Don't save the user 
	in the document.

2009-08-19  David King  <davidk@openismus.com>

	* glom.am:
	* libegg.am:
	* libglom.am:
	* tests.am: Remove unused .am files.
	* glom/libglom/test_document_with_layout.cc: Remove unused file,
	identical to glom/libglom/test_document.cc.
	* ChangeLog: Fix some formatting.
